# MaxLib

./: CMakeCache.txt  CMakeLists.txt  DemoGiString.hpp  Makefile  README.md  cmake_install.cmake
src/: demo.cpp
src/GiInt/: GiInt.cpp  GiInt.hpp
src/GiLogs/: GiLogs.cpp  GiLogs.hpp
src/GiString/: GiString.cpp  GiString.hpp  TODO.md
src/init/: init.hpp  main.cpp
